--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
@@ -1,37 +1,93 @@
-/* navigation bar */
+/* NAVIGATION BAR STYLING */
 
-#logo{
-  display: inline-block;
-  position: absolute;
-  min-width: 400px;
-  height: 100%;
-  left: 0;
-  background-color: red;
+nav{
+  height: 20vw;
 }
 
-#logo-img{
-  position: absolute;
-  margin: auto;
+.logo img{
+  width: 60vw;
 }
 
-#navigation{
-  display: inline-block;
-  position: absolute;
-  min-width: 100px;
-  height: 100%;
-  right: 0;
-  background-color: blue;
+.navigation img{
+  width: 12vw;
 }
 
-#menu{
-  display: inline-block;
-  position: absolute;
-  width: 30%;
+.navLink{
+  display: none;
 }
 
+/* MAIN STYLING */
 
+main{
+  height: 130vw;
+  text-align: center;
+}
 
+.circleContainer{
+  position: relative;
+  width: 100vw;
+  height: 80vw;
+  text-align: center;
+}
 
+.circle{
+  position: absolute;
+  width: 70vw;
+  height: 75vw;
+  top: 4%;
+  left: 15%;
+  border-radius: 50%;
+  background-image: linear-gradient(#B8B8B8, #737373);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.343);
+  overflow: hidden;
+}
 
+.circle img{
+  width: 80%;
+  padding-left: 8vw;
+}
 
+.info{
+  height: 28vh;
+  text-align: center;
+}
 
+.info h3{
+  font-size: 6vw;
+  font-weight: 400;
+}
+
+.info h1{
+  font-size: 10vw;
+  font-weight: 550;
+}
+
+.info h2{
+  font-size: 6.7vw;
+}
+
+.info button{
+  width: 39vw;
+  font-size: 4vw;
+  padding: 2vw;
+  margin: 5vw 3vw;
+  border-radius: 20vw;
+}
+
+.cvBtn{
+  border: 3;
+  background-color: #B8B8B8;
+}
+
+.contactBtn{
+  border: none;
+  color: white;
+  background-color: #2D2B2B;
+}
+
+/* ABOUT ME STYLING */
+
+.about{
+  height: 150vw;
+  background-color: #2D2B2B;
+}
