--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.general.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.general.css
@@ -1,43 +1,31 @@
-
+/* GENERAL STYLING */
+/* ColorS: B8B8B8 light --- 2D2B2B dark */
 *{
   margin: 0;
-  padding: 0;
-  border: none;
+  padding: none;
 }
+
 body{
   background-color: #B8B8B8;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 html{
   scroll-behavior: smooth;
 }
+
+#wholePage{
+  display: grid;
+}
+
+/* NAVIGATION STYLE */
+
 nav{
   display: flex;
-  position: relative;
-  width: 100vw;
-  height: 12vh;
-  box-shadow: 0 5px 10px hsla(0, 0%, 0%, 0.202);
-}
+  justify-content:space-around;
+  align-items: center;
 
-#menu{
-  display: none;
-}
-
-#nav-link{
-  display: none;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.42);
 }
 
 
-main{
-  display: block;
-  height: 100vh;
-}
-
-footer{
-  display: block;
-  height: 20vh;
-  background-color: #2D2B2B;
-  box-shadow: 0 -5px 15px hsla(0, 0%, 0%, 0.408);
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
