--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.deskstop.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.deskstop.css
@@ -21,10 +21,6 @@ nav{
 }
 
 @media screen and (min-width: 900px){
-  .navLink{
-    font-size: 1.rem;
-  }
-
   nav{
     height: 15vh;
   }
@@ -34,7 +30,7 @@ nav{
   }
 
   .navLink{
-    font-size: 2.5vh;
+    font-size: 20px;
     margin-top: 10vh;
     gap: 5vw;
   }
@@ -43,17 +39,14 @@ nav{
 /* MAIN STYLING */
 
 main{
-  display: grid;
-  grid-column: 1fr 1fr;
-  height: 100vh;
+  display: flex;
+  height: 60vw;
 }
 
 .circleContainer{
-  display: inline-block;
   position: relative;
   width: 50vw;
   height: 60vw;
-  background-color: blue;
 }
 
 .circle{
@@ -79,28 +72,29 @@ main{
   width: 50vw;
   height: 60vw;
   text-align: center;
-  background-color: red;
 }
 
 .info h3{
-  font-size: 6vw;
+  margin-top: 13vw;
+  font-size: 3.5vw;
   font-weight: 400;
 }
 
 .info h1{
-  font-size: 10vw;
+  font-size: 5vw;
   font-weight: 550;
 }
 
 .info h2{
-  font-size: 6.7vw;
+  font-size: 3.5vw;
+  margin-bottom: 5vw;
 }
 
 .info button{
-  width: 39vw;
-  font-size: 4vw;
-  padding: 2vw;
-  margin: 5vw 3vw;
+  width: 30vw;
+  font-size: 3vw;
+  padding: 1vw;
+  margin: 1vw 3vw;
   border-radius: 20vw;
 }
 
@@ -112,5 +106,82 @@ main{
 .contactBtn{
   border: none;
   color: white;
+  background-color: #2D2B2B;
+}
+
+@media screen and (min-width: 900px){
+  
+main{
+  display: flex;
+  justify-content: center;
+  height: 85vh;
+}
+
+.circleContainer{
+  width: 460px;
+  height: 85vh;
+}
+
+.circle{
+  position: absolute;
+  width: 370px;
+  height: 400px;
+  top: 100px;
+  border-radius: 50%;
+  background-image: linear-gradient(#B8B8B8, #737373);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.343);
+  overflow: hidden;
+}
+
+.circle img{
+  width: 80%;
+  padding-left: 55px;
+}
+
+.info{
+  width: 460px;
+  height: 85vh;
+  text-align: center;
+}
+
+.info h3{
+  margin-top: 150px;
+  font-size: 35px;
+  font-weight: 400;
+}
+
+.info h1{
+  font-size: 45px;
+  font-weight: 550;
+}
+
+.info h2{
+  font-size: 30px;
+  margin-bottom: 5vw;
+}
+
+.info button{
+  width: 260px;
+  font-size: 25px;
+  padding: 10px;
+  margin: 10px 30px;
+  border-radius: 20vw;
+}
+
+.cvBtn{
+  border: 3;
+  background-color: #B8B8B8;
+}
+
+.contactBtn{
+  border: none;
+  color: white;
+  background-color: #2D2B2B;
+}
+
+}
+
+.about{
+  height: 100vh;
   background-color: #2D2B2B;
 }
