--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
@@ -1,6 +1,6 @@
 /* NAVIGATION BAR STYLING */
 
-nav{
+nav, #empty{
   height: 20vw;
 }
 
@@ -58,12 +58,12 @@ main{
 }
 
 .info h1{
-  font-size: 10vw;
+  font-size: 9vw;
   font-weight: 550;
 }
 
 .info h2{
-  font-size: 6.7vw;
+  font-size: 5vw;
 }
 
 .info button{
@@ -87,7 +87,17 @@ main{
 
 /* ABOUT ME STYLING */
 
-.about{
+#about{
   height: 150vw;
+  background-color: #2D2B2B;
+}
+
+#project{
+  height: 150vw;
+  background-color: #870b0b;
+}
+
+#footerContainer{
+  height: 30vw;
   background-color: #2D2B2B;
 }
