--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.deskstop.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.deskstop.css
@@ -1,11 +1,11 @@
 /* /NAVIGATION  BAR STYLING */
 
-nav{
+nav, #empty{
   height: 13vw;
 }
 
 .logo img{
-  width: 40vw;
+  width: 35vw;
 }
 
 .navigation img{
@@ -20,8 +20,18 @@ nav{
   list-style-type: none;
 }
 
+.navLink a{
+  text-decoration: none;
+  color: black;
+}
+
+.navLink a:hover{
+  text-decoration: underline;
+  color: rgba(64, 63, 63, 0.897);
+}
+
 @media screen and (min-width: 900px){
-  nav{
+  nav, #empty{
     height: 15vh;
   }
   
@@ -76,18 +86,20 @@ main{
 
 .info h3{
   margin-top: 13vw;
-  font-size: 3.5vw;
+  font-size: 2.5vw;
   font-weight: 400;
 }
 
 .info h1{
-  font-size: 5vw;
+  font-size: 4.5vw;
   font-weight: 550;
+  margin: 1vw 0vw;
 }
 
 .info h2{
-  font-size: 3.5vw;
-  margin-bottom: 5vw;
+  font-size: 2.5vw;
+  font-weight:550;
+  margin-bottom: 4vw;
 }
 
 .info button{
@@ -146,18 +158,18 @@ main{
 
 .info h3{
   margin-top: 150px;
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 400;
 }
 
 .info h1{
   font-size: 45px;
   font-weight: 550;
-}
+} 
 
 .info h2{
-  font-size: 30px;
-  margin-bottom: 5vw;
+  font-size: 25px;
+  margin-bottom: 4vw;
 }
 
 .info button{
@@ -181,7 +193,23 @@ main{
 
 }
 
-.about{
+#about{
   height: 100vh;
+  background-color: #2D2B2B;
+  text-align: center;
+}
+
+#about > h1{
+  color: #B8B8B8;
+
+}
+
+#project{
+  height: 100vh;
+  background-color: #870b0b;
+}
+
+#footerContainer{
+  height: 30vh;
   background-color: #2D2B2B;
 }
