--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.general.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.general.css
@@ -3,6 +3,7 @@
 *{
   margin: 0;
   padding: none;
+  text-align: center;
 }
 
 body{
@@ -19,13 +20,34 @@ html{
 }
 
 /* NAVIGATION STYLE */
-
+#empty{
+  display: inline-block;
+  width: 100vw;
+}
 nav{
   display: flex;
+  position: fixed;
   justify-content:space-around;
   align-items: center;
+  width: 100vw;
+  z-index: 1000;
+  top: 0px;
 
+  background: ;
+
+  background-color: #b8b8b8d2;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.42);
 }
 
+/* BUTTON EFFECT */
+.info button:hover{
+  box-shadow: 3px 3px 10px rgba(25, 25, 25, 0.559);
+}
 
+.cvBtn:hover{
+  background-color: #8f8f8f;
+}
+
+.contactBtn:hover{
+  background-color: #474747;
+}
