added the about page content for deskstop

--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
@@ -92,6 +92,29 @@ main{
   background-color: #2D2B2B;
 }
 
+#about > h3{
+  display: inline-block;
+  font-size: 2vw;
+  margin-top: 5vw;
+}
+
+#about > h1{
+  font-size: 7vw;
+}
+
+#aboutContentContainer{
+  position: relative;
+  width: 100vw;
+}
+
+#infomation-about{
+  width: 100%;
+}
+
+
+
+
+
 #project{
   height: 150vw;
   background-color: #870b0b;
@@ -101,3 +124,4 @@ main{
   height: 30vw;
   background-color: #2D2B2B;
 }
+
