--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.general.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.general.css
@@ -2,7 +2,7 @@
 /* ColorS: B8B8B8 light --- 2D2B2B dark */
 *{
   margin: 0;
-  padding: none;
+  padding: 0;
   text-align: center;
 }
 
@@ -32,9 +32,6 @@ nav{
   width: 100vw;
   z-index: 1000;
   top: 0px;
-
-  background: ;
-
   background-color: #b8b8b8d2;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.42);
 }
