if ever dili mogana and media sa link

--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style-mobile.css
@@ -1,4 +1,5 @@
-/* NAVIGATION BAR STYLING */
+@media screen and (max-width: 600px) {
+  /* NAVIGATION BAR STYLING */
 
 nav, #empty{
   height: 20vw;
@@ -373,3 +374,5 @@ main{
   color: #1900ff62;
 }
 
+
+}
