--- a/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.deskstop.css
+++ b/Porfolio-mobile-deskstop/portfolio-1/asset/css/style.deskstop.css
@@ -1,4 +1,5 @@
-/* /NAVIGATION  BAR STYLING */
+@media screen and (min-width: 601px) {
+  /* /NAVIGATION  BAR STYLING */
 
 nav, #empty{
   height: 13vw;
@@ -392,4 +393,5 @@ main{
 .contactLogo a:hover{
   text-decoration: underline;
   color: #1900ff62;
+}
 }
